--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/serve-static": "^2.1.4",
+    "@nestjs/swagger": "^4.8.0",
+    "@types/multer": "^1.4.5",
+    "concurrently": "^6.0.0",
     "forge-apis": "^0.8.5",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
